[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Nunito-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Setting.gd" type="Script" id=2]
[ext_resource path="res://Scripts/FPS.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.341176 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.490196 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Setting" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 100
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 100.0
margin_right = 490.0
margin_bottom = 910.0
custom_constants/separation = 10

[node name="MusicCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_right = 440.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
pressed = true
text = "Music"
flat = true

[node name="SoundCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 440.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 2 )
pressed = true
text = "Sound"
flat = true

[node name="FPSButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 440.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 1 )
text = "FPS"
flat = true

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 440.0
margin_bottom = 254.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "Back"

[node name="FPS" type="Label" parent="."]
visible = false
margin_right = 80.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "00 fps"
align = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/MusicCheckButton" to="." method="_on_MusicCheckButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SoundCheckButton" to="." method="_on_SoundCheckButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FPSButton" to="." method="_on_FPSButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
